kubernetes/apps/phpmyadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
  name: phpmyadmin
  namespace: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        app.kubernetes.io/name: phpmyadmin
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - image: phpmyadmin/phpmyadmin:5.2.2
          name: phpmyadmin
