kubernetes/apps/phpmyadmin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin
  namespace: mariadb
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`phpmyadmin.f9.casa`)
      kind: Rule
      services:
        - name: phpmyadmin
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik
          namespace: authentik
